# img3-contour-recognition

./: .gitignore  CMakeLists.txt  README.md
data/: contour1.txt
data/airplane/: airplane_a0_s1.0.txt  airplane_a0_s1.5.txt  airplane_a0_s2.0.txt  airplane_a30_s1.0.txt  airplane_a30_s1.5.txt  airplane_a30_s2.0.txt  airplane_a60_s1.0.txt  airplane_a60_s1.5.txt  airplane_a60_s2.0.txt  airplane_a90_s1.0.txt  airplane_a90_s1.5.txt  airplane_a90_s2.0.txt
data/ship/: ship_a0_s1.0.txt  ship_a0_s1.5.txt  ship_a0_s2.0.txt  ship_a30_s1.0.txt  ship_a30_s1.5.txt  ship_a30_s2.0.txt  ship_a60_s1.0.txt  ship_a60_s1.5.txt  ship_a60_s2.0.txt  ship_a90_s1.0.txt  ship_a90_s1.5.txt  ship_a90_s2.0.txt
data/tank/: tank_a0_s1.0.txt  tank_a0_s1.5.txt  tank_a0_s2.0.txt  tank_a30_s1.0.txt  tank_a30_s1.5.txt  tank_a30_s2.0.txt  tank_a60_s1.0.txt  tank_a60_s1.5.txt  tank_a60_s2.0.txt  tank_a90_s1.0.txt  tank_a90_s1.5.txt  tank_a90_s2.0.txt
include/: characteristic.h  compare.h  contour_features.h  contour_io.h  geometry.h  point.h
src/: characteristic.cpp  compare.cpp  contour_features.cpp  contour_io.cpp  geometry.cpp  main.cpp
